--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title>Colmar Academy</title>
+    <link rel="stylesheet" href="./resources/css/reset.css">
+    <link rel="stylesheet" href="./resources/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    <title>Colmar Academy</title>
   </head>
   <body>
-
+    <header>
+      <div class="content">
+        <div class="logo">
+          <img src="./resources/images/ic-logo.svg" alt="A lion icon">
+          <a href="index.html" class="desktop logo">Colmar Academy</a>
+        </div>
+        <div class="navigation">
+          <nav class="desktop">
+            <ul>
+              <li><a href="#">On Campus</a></li>
+              <li><a href="#">Online</a></li>
+              <li><a href="#">Our Companies</a></li>
+              <li><a href="#">Sign In</a></li>
+            </ul>
+          </nav>
+          <nav class="mobile">
+            <ul>
+              <li><a href="#"><img src="./resources/images/ic-logo.svg"></a></li>
+              <li><a href="#"><img src="./resources/images/ic-product-detail.svg"></a></li>
+              <li><a href="#"><img src="./resources/images/ic-about-us.svg"></a></li>
+              <li><a href="#" class="button">Join us</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
