--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       <div class="content">
         <div class="logo">
           <img src="./resources/images/ic-logo.svg" alt="A lion icon">
-          <a href="index.html" class="desktop logo">Colmar Academy</a>
+          <a href="index.html" class="desktop logo">ColmarAcademy</a>
         </div>
         <div class="navigation">
           <nav class="desktop">
             <ul>
-              <li><a href="#">On Campus</a></li>
+              <li><a href="#">On campus</a></li>
               <li><a href="#">Online</a></li>
-              <li><a href="#">Our Companies</a></li>
-              <li><a href="#">Sign In</a></li>
+              <li><a href="#">Our companies</a></li>
+              <li><a href="#">Sign in</a></li>
             </ul>
           </nav>
           <nav class="mobile">
