Add photo for banner section and initial banner html code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">    <title>Colmar Academy</title>
   </head>
   <body>
+
+<!--Header-->
+
     <header>
       <div class="content">
         <div class="logo">
@@ -33,5 +36,14 @@
         </div>
       </div>
     </header>
+<!--Banner-->
+    <div class="banner">
+      <div class="container">
+        <img src="./resources/images/banner.jpg" alt="students at a picnic table">
+      </div>
+    </div>
+
+
+
   </body>
 </html>
