--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
 <!--Banner-->
     <div class="banner">
       <div class="container">
+        <div class="container-image">
         <img src="./resources/images/banner.jpg" alt="students at a picnic table">
+        </div>
+        <div class="banner-text">
+          <h1>Learn something new everyday</h1>
+          <h3>You never know what you might find when your mind is open.</h3>
+          <div class="button">
+            <p>Start here</p>
+          </div>
+        </div>
       </div>
     </div>
 
