--- a/index.html
+++ b/index.html
@@ -52,7 +52,50 @@
       </div>
     </div>
 
+    <!--Hero-->
+        <div class="information">
+          <div class="container">
+            <div class="container-image">
+            <img src="./resources/images/information-main.jpg" alt="students at a picnic table">
+            <h1>It doesn't hurt to keep practicing.</h1>
+            <p>Mattis praesent auctor suscipit mi velit vitae pulvinar lorem massa Elit nibh magna enim scelerisque dignissim placerat tortor sagittis ligula fringilla eros blandit. Aptent ligula tellus quis, tempor ultrices orci</p>
+            <p class="caption">Emanuel, Sr Strategist at Hiring.com</p>
+            </div>
 
+            <div class="features">
+              <div class="feature">
+                <div class="feature-photo">
+                  <img src="./resources/images/information-orientation.jpg" alt="people walking in a courtyard">
+                </div>
+                <div class="feature-info">
+                  <h3>Orientation date</h3>
+                  <p>Tue 10/11 and Wed 10/12 8am-3pm</p>
+                  <p class="more">Read more</p>
+                </div>
+              </div>
+              <div class="feature">
+                <div class="feature-photo">
+                  <img src="./resources/images/information-campus.jpg" alt="people studying in a library">
+                </div>
+                <div class="feature-info">
+                  <h3></h3>
+                  <p></p>
+                  <p class="more">Read more</p>
+                </div>
+              </div>
+              <div class="feature">
+                <div class="feature-photo">
+                  <img src="./resources/images/information-guest-lecture.jpg" alt="A man's face">
+                </div>
+                <div class="feature-info">
+                  <h3></h3>
+                  <p></p>
+                  <p class="more">Read more</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
   </body>
 </html>
