--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         </div>
       </div>
     </header>
+
+    <div class="main-content">
+
 <!--Banner-->
     <div class="banner">
       <div class="container">
@@ -78,8 +81,8 @@
                   <img src="./resources/images/information-campus.jpg" alt="people studying in a library">
                 </div>
                 <div class="feature-info">
-                  <h3></h3>
-                  <p></p>
+                  <h3>Our campus</h3>
+                  <p>Find which campus is closest to you</p>
                   <p class="more">Read more</p>
                 </div>
               </div>
@@ -88,14 +91,15 @@
                   <img src="./resources/images/information-guest-lecture.jpg" alt="A man's face">
                 </div>
                 <div class="feature-info">
-                  <h3></h3>
-                  <p></p>
+                  <h3>Our guest lecture</h3>
+                  <p>Join a keynote with Oliver Sack about music in medical treatment</p>
                   <p class="more">Read more</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
 
   </body>
 </html>
