--- a/index.html
+++ b/index.html
@@ -59,20 +59,20 @@
         <div class="information">
           <div class="container">
             <div class="container-image">
-            <img src="./resources/images/information-main.jpg" alt="students at a picnic table">
+            <img src="./resources/images/information-main.jpg" alt="a man studying">
             <h1>It doesn't hurt to keep practicing.</h1>
             <p>Mattis praesent auctor suscipit mi velit vitae pulvinar lorem massa Elit nibh magna enim scelerisque dignissim placerat tortor sagittis ligula fringilla eros blandit. Aptent ligula tellus quis, tempor ultrices orci</p>
             <p class="caption">Emanuel, Sr Strategist at Hiring.com</p>
             </div>
 
             <div class="features">
-              <div class="feature">
+              <div class="feature" id="orientation">
                 <div class="feature-photo">
                   <img src="./resources/images/information-orientation.jpg" alt="people walking in a courtyard">
                 </div>
                 <div class="feature-info">
                   <h3>Orientation date</h3>
-                  <p>Tue 10/11 and Wed 10/12 8am-3pm</p>
+                  <h4>Tue 10/11 and Wed 10/12 8am-3pm</h4>
                   <p class="more">Read more</p>
                 </div>
               </div>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="feature-info">
                   <h3>Our campus</h3>
-                  <p>Find which campus is closest to you</p>
+                  <h4>Find which campus is close by you</h4>
                   <p class="more">Read more</p>
                 </div>
               </div>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="feature-info">
                   <h3>Our guest lecture</h3>
-                  <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                  <h4>Join a keynote with Oliver Sack about music in medical treatment</h4>
                   <p class="more">Read more</p>
                 </div>
               </div>
