Adjust text and background colors

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="content">
         <div class="logo">
           <img src="./resources/images/ic-logo.svg" alt="A lion icon">
-          <a href="index.html" class="desktop logo">ColmarAcademy</a>
+          <a href="index.html" class="desktop logo">Colmar<span style="color:#b3b3b3">Academy</a>
         </div>
         <div class="navigation">
           <nav class="desktop">
@@ -61,7 +61,7 @@
           <div class="container">
             <div class="container-image">
             <img src="./resources/images/information-main.jpg" alt="a man studying">
-            <h1>It doesn't hurt to keep practicing.</h1>
+            <h2>It doesn't hurt to keep practicing.</h2>
             <p>Mattis praesent auctor suscipit mi velit vitae pulvinar lorem massa Elit nibh magna enim scelerisque dignissim placerat tortor sagittis ligula fringilla eros blandit. Aptent ligula tellus quis, tempor ultrices orci</p>
             <p class="caption">Emanuel, Sr Strategist at Hiring.com</p>
             </div>
