Add html code for .courses

--- a/index.html
+++ b/index.html
@@ -100,6 +100,58 @@
             </div>
           </div>
         </div>
+
+        <!-- Courses -->
+
+          <div class="container">
+            <h2>Start learning</h2>
+            <div class="courses">
+
+              <div class="course">
+                <img src="" alt="">
+                <h3>Software engineering</h3>
+                <h4>COURSES</h4>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+              </div>
+
+              <div class="course">
+                <img src="./resources/images/course-computer-art.jpg" alt="hand with smart phone">
+                <h3>Computer art</h3>
+                <h4>COURSES</h4>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+              </div>
+
+              <div class="course">
+                <img src="./resources/images/course-design.jpg" alt="hand with old camera">
+                <h3>Design</h3>
+                <h4>COURSES</h4>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+              </div>
+
+              <div class="course">
+                <img src="./resources/images/course-data.jpg" alt="a laptop">
+                <h3>Data</h3>
+                <h4>COURSES</h4>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+              </div>
+
+              <div class="course">
+                <img src="./resources/images/course-business.jpg" alt="a chess board">
+                <h3>Business</h3>
+                <h4>COURSES</h4>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+              </div>
+
+              <div class="course">
+                <img src="./resources/images/course-computer-art.jpg" alt="a smart watch">
+                <h3>Marketing</h3>
+                <h4>COURSES</h4>
+                <p>Web Development, Mobile Development, iOT, APIs</p>
+              </div>
+
+            </div>
+          </div>
+        </div>
       </div>
 
   </body>
