--- a/index.html
+++ b/index.html
@@ -107,45 +107,69 @@
               <h2>Start learning</h2>
               <div class="course-offerings">
                 <div class="course">
-                  <img src="./resources/images/course-software.jpg" alt="computers">
-                  <h3>Software engineering</h3>
-                  <h4>COURSES</h4>
-                  <p>Web Development, Mobile Development, iOT, APIs</p>
+                  <div class="course-image">
+                    <img src="./resources/images/course-software.jpg" alt="computers">
+                  </div>
+                  <div class="course-info">
+                    <h3>Software engineering</h3>
+                    <h4>COURSES</h4>
+                    <p>Web Development, Mobile Development, iOT, APIs</p>
+                  </div>
                 </div>
 
                 <div class="course">
-                  <img src="./resources/images/course-computer-art.jpg" alt="hand with smart phone">
-                  <h3>Computer art</h3>
-                  <h4>COURSES</h4>
-                  <p>Web Development, Mobile Development, iOT, APIs</p>
+                  <div class="course-image">
+                    <img src="./resources/images/course-computer-art.jpg" alt="hand with smart phone">
+                  </div>
+                  <div class="course-info">
+                    <h3>Computer art</h3>
+                    <h4>COURSES</h4>
+                    <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                  </div>
                 </div>
 
                 <div class="course" id="design">
-                  <img src="./resources/images/course-design.jpg" alt="hand with old camera">
-                  <h3>Design</h3>
-                  <h4>COURSES</h4>
-                  <p>Web Development, Mobile Development, iOT, APIs</p>
+                  <div class="course-image">
+                    <img src="./resources/images/course-design.jpg" alt="hand with old camera">
+                  </div>
+                  <div class="course-info">
+                    <h3>Design</h3>
+                    <h4>COURSES</h4>
+                    <p>User Experience Design, User Research, Visual Design</p>
+                  </div>
                 </div>
 
                 <div class="course">
-                  <img src="./resources/images/course-data.jpg" alt="a laptop">
-                  <h3>Data</h3>
-                  <h4>COURSES</h4>
-                  <p>Web Development, Mobile Development, iOT, APIs</p>
+                  <div class="course-image">
+                    <img src="./resources/images/course-data.jpg" alt="a laptop">
+                  </div>
+                  <div class="course-info">
+                    <h3>Data</h3>
+                    <h4>COURSES</h4>
+                    <p>Data Science, Big Data, SQL, Data Visualization</p>
+                  </div>
                 </div>
 
                 <div class="course">
-                  <img src="./resources/images/course-business.jpg" alt="a chess board">
-                  <h3>Business</h3>
-                  <h4>COURSES</h4>
-                  <p>Web Development, Mobile Development, iOT, APIs</p>
+                  <div class="course-image">
+                    <img src="./resources/images/course-business.jpg" alt="a chess board">
+                  </div>
+                  <div class="course-info">
+                    <h3>Business</h3>
+                    <h4>COURSES</h4>
+                    <p>Product Development, Business Development, Startup</p>
+                  </div>
                 </div>
 
                 <div class="course" id="marketing">
-                  <img src="./resources/images/course-computer-art.jpg" alt="a smart watch">
-                  <h3>Marketing</h3>
-                  <h4>COURSES</h4>
-                  <p>Web Development, Mobile Development, iOT, APIs</p>
+                  <div class="course-image">
+                    <img src="./resources/images/course-computer-art.jpg" alt="a smart watch">
+                  </div>
+                  <div class="course-info">
+                    <h3>Marketing</h3>
+                    <h4>COURSES</h4>
+                    <p>Analytics, Content Marketing, Mobile Marketing</p>
+                  </div>
                 </div>
               </div>
             </div>
