Add html for .thesis section, and add initial styling and positioning

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         <!-- Courses -->
         <div class="courses">
           <div class="container" id="courses">
+            <div class="title-section">
               <h2>Start learning</h2>
               <div class="course-offerings">
                 <div class="course">
@@ -172,6 +173,45 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+          </div>
+<!-- Thesis section -->
+
+            <div class="container" id="thesis">
+              <div class="title-section">
+                <h2>Thesis exhibit</h2>
+                <div class="thesis-info">
+                  <div class="container-image">
+                  <img src="./resources/images/information-main.jpg" alt="a man studying">
+                  <h2>It doesn't hurt to keep practicing.</h2>
+                  <p>Mattis praesent auctor suscipit mi velit vitae pulvinar lorem massa Elit nibh magna enim scelerisque dignissim placerat tortor sagittis ligula fringilla eros blandit. Aptent ligula tellus quis, tempor ultrices orci</p>
+                  <p class="caption">Emanuel, Sr Strategist at Hiring.com</p>
+                  </div>
+
+                  <div class="features">
+                    <div class="feature" id="orientation">
+                      <div class="feature-photo">
+                        <img src="./resources/images/information-orientation.jpg" alt="people walking in a courtyard">
+                      </div>
+                      <div class="feature-info">
+                        <h3>Orientation date</h3>
+                        <h4>Tue 10/11 and Wed 10/12 8am-3pm</h4>
+                        <p class="more">Read more</p>
+                      </div>
+                    </div>
+                    <div class="feature">
+                      <div class="feature-photo">
+                        <img src="./resources/images/information-campus.jpg" alt="people studying in a library">
+                      </div>
+                      <div class="feature-info">
+                        <h3>Our campus</h3>
+                        <h4>Find which campus is close by you</h4>
+                        <p class="more">Read more</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
           </div>
         </div>
