Replace .thesis image with video

--- a/index.html
+++ b/index.html
@@ -182,9 +182,10 @@
               <div class="title-section">
                 <h2>Thesis exhibit</h2>
                 <div class="thesis-info">
-                  <div class="container-image">
-                  <img src="./resources/images/information-main.jpg" alt="a man studying">
-                  <h2>It doesn't hurt to keep practicing.</h2>
+                  <div class="container-video">
+                    <video src="thesis.mp4" poster="initial_static_picture.jpg" width="480" controls>
+                    </video>
+                    <h2>Reimagine urban</h2>
                   <p>Mattis praesent auctor suscipit mi velit vitae pulvinar lorem massa Elit nibh magna enim scelerisque dignissim placerat tortor sagittis ligula fringilla eros blandit. Aptent ligula tellus quis, tempor ultrices orci</p>
                   <p class="caption">Emanuel, Sr Strategist at Hiring.com</p>
                   </div>
