--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!--Banner-->
     <div class="banner">
       <div class="container">
-        <div class="container-image">
+        <div class="container-media">
         <img src="./resources/images/banner.jpg" alt="students at a picnic table">
         </div>
         <div class="banner-text">
@@ -59,7 +59,7 @@
     <!--Hero-->
         <div class="information">
           <div class="container">
-            <div class="container-image">
+            <div class="container-media">
             <img src="./resources/images/information-main.jpg" alt="a man studying">
             <h2>It doesn't hurt to keep practicing.</h2>
             <p>Mattis praesent auctor suscipit mi velit vitae pulvinar lorem massa Elit nibh magna enim scelerisque dignissim placerat tortor sagittis ligula fringilla eros blandit. Aptent ligula tellus quis, tempor ultrices orci</p>
@@ -182,12 +182,14 @@
               <div class="title-section">
                 <h2>Thesis exhibit</h2>
                 <div class="thesis-info">
-                  <div class="container-video">
-                    <video src="thesis.mp4" poster="initial_static_picture.jpg" width="480" controls>
+                  <div class="container-media">
+                    <video width="100%" controls>
+                      <source src="/resources/videos/thesis.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
                     </video>
+
                     <h2>Reimagine urban</h2>
                   <p>Mattis praesent auctor suscipit mi velit vitae pulvinar lorem massa Elit nibh magna enim scelerisque dignissim placerat tortor sagittis ligula fringilla eros blandit. Aptent ligula tellus quis, tempor ultrices orci</p>
-                  <p class="caption">Emanuel, Sr Strategist at Hiring.com</p>
                   </div>
 
                   <div class="features">
@@ -196,9 +198,8 @@
                         <img src="./resources/images/information-orientation.jpg" alt="people walking in a courtyard">
                       </div>
                       <div class="feature-info">
-                        <h3>Orientation date</h3>
-                        <h4>Tue 10/11 and Wed 10/12 8am-3pm</h4>
-                        <p class="more">Read more</p>
+                        <h3>Fisma: Design and Prototype</h3>
+                        <h4>Designer showcase of new prototype product</h4>
                       </div>
                     </div>
                     <div class="feature">
@@ -206,9 +207,8 @@
                         <img src="./resources/images/information-campus.jpg" alt="people studying in a library">
                       </div>
                       <div class="feature-info">
-                        <h3>Our campus</h3>
-                        <h4>Find which campus is close by you</h4>
-                        <p class="more">Read more</p>
+                        <h3>Now and then</h3>
+                        <h4>Research study about New York</h4>
                       </div>
                     </div>
                   </div>
@@ -216,7 +216,17 @@
             </div>
           </div>
         </div>
-      </div>
+
+<!-- Footer -->
+        <footer>
+          <div class="content">
+            <span class="copyright">© 2016  Colmar Academy. All rights reserved</span>
+            <ul class="terms">
+              <li>Terms</li>
+              <li>Privacy</li>
+            </ul>
+          </div>
+        </footer>
 
   </body>
 </html>
