--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="content">
         <div class="logo">
           <img src="./resources/images/ic-logo.svg" alt="A lion icon">
-          <a href="index.html" class="desktop logo">Colmar<span style="color:#b3b3b3">Academy</a>
+          <a href="index.html" class="desktop logo">Colmar<span style="color:#8a8604">Academy</a>
         </div>
         <div class="navigation">
           <nav class="desktop">
@@ -41,22 +41,23 @@
     <div class="main-content">
 
 <!--Banner-->
-    <div class="banner">
-      <div class="container">
-        <div class="container-media">
-        <img src="./resources/images/banner.jpg" alt="students at a picnic table">
-        </div>
-        <div class="banner-text">
-          <h1>Learn something new everyday</h1>
-          <h3>You never know what you might find when your mind is open.</h3>
-          <div class="button">
-            <p>Start here</p>
+      <div class="banner">
+        <div class="container">
+          <div class="container-media">
+          <img src="./resources/images/banner.jpg" alt="students at a picnic table">
+          </div>
+          <div class="banner-text">
+            <h1>Learn something new everyday</h1>
+            <h3>You never know what you might find when your mind is open.</h3>
+            <div class="button">
+              <p>Start here</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <!--Hero-->
+<!--Hero / Information-->
+
         <div class="information">
           <div class="container">
             <div class="container-media">
@@ -101,7 +102,8 @@
           </div>
         </div>
 
-        <!-- Courses -->
+<!-- Courses -->
+
         <div class="courses">
           <div class="container" id="courses">
             <div class="title-section">
@@ -175,7 +177,8 @@
               </div>
             </div>
           </div>
-          </div>
+        </div>
+
 <!-- Thesis section -->
 
             <div class="container" id="thesis">
