--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
                   </div>
 
                   <div class="features">
-                    <div class="feature" id="orientation">
+                    <div class="feature">
                       <div class="feature-photo">
-                        <img src="./resources/images/information-orientation.jpg" alt="people walking in a courtyard">
+                        <img src="./resources/images/thesis-fisma.jpg" alt="a busy desk">
                       </div>
                       <div class="feature-info">
                         <h3>Fisma: Design and Prototype</h3>
@@ -207,7 +207,7 @@
                     </div>
                     <div class="feature">
                       <div class="feature-photo">
-                        <img src="./resources/images/information-campus.jpg" alt="people studying in a library">
+                        <img src="./resources/images/thesis-now-and-then.jpg" alt="skyscrapers">
                       </div>
                       <div class="feature-info">
                         <h3>Now and then</h3>
