Fix video code and set to muted autoplay

--- a/index.html
+++ b/index.html
@@ -186,12 +186,8 @@
                 <h2>Thesis exhibit</h2>
                 <div class="thesis-info">
                   <div class="container-media">
-                    <video width="100%" controls>
-                      <source src="/resources/videos/thesis.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-
-                    <h2>Reimagine urban</h2>
+                    <video src="resources/videos/thesis.mp4" muted="" autoplay="">Your browser does not support the video tag.</video>
+                    <h3>Reimagine urban</h3>
                   <p>Mattis praesent auctor suscipit mi velit vitae pulvinar lorem massa Elit nibh magna enim scelerisque dignissim placerat tortor sagittis ligula fringilla eros blandit. Aptent ligula tellus quis, tempor ultrices orci</p>
                   </div>
 
