Adjust font sizes and element positioning based on new font

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="content">
         <div class="logo">
           <img src="./resources/images/ic-logo.svg" alt="A lion icon">
-          <a href="index.html" class="desktop logo">Colmar<span style="color:#8a8604">Academy</a>
+          <a href="index.html" class="desktop logo"><span style="color: #04030c">Colmar</span><span style="color:#8a8604">Academy</a>
         </div>
         <div class="navigation">
           <nav class="desktop">
@@ -106,7 +106,7 @@
 <!-- Courses -->
 
         <div class="courses">
-          <div class="container" id="courses">
+          <div class="container">
             <div class="title-section">
               <h2>Start learning</h2>
               <div class="course-offerings">
@@ -116,7 +116,7 @@
                   </div>
                   <div class="course-info">
                     <h3>Software engineering</h3>
-                    <h4>COURSES</h4>
+                    <h4 class="course-list">COURSES</h4>
                     <p>Web Development, Mobile Development, iOT, APIs</p>
                   </div>
                 </div>
@@ -127,7 +127,7 @@
                   </div>
                   <div class="course-info">
                     <h3>Computer art</h3>
-                    <h4>COURSES</h4>
+                    <h4 class="course-list">COURSES</h4>
                     <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
                   </div>
                 </div>
@@ -138,7 +138,7 @@
                   </div>
                   <div class="course-info">
                     <h3>Design</h3>
-                    <h4>COURSES</h4>
+                    <h4 class="course-list">COURSES</h4>
                     <p>User Experience Design, User Research, Visual Design</p>
                   </div>
                 </div>
@@ -149,7 +149,7 @@
                   </div>
                   <div class="course-info">
                     <h3>Data</h3>
-                    <h4>COURSES</h4>
+                    <h4 class="course-list">COURSES</h4>
                     <p>Data Science, Big Data, SQL, Data Visualization</p>
                   </div>
                 </div>
@@ -160,7 +160,7 @@
                   </div>
                   <div class="course-info">
                     <h3>Business</h3>
-                    <h4>COURSES</h4>
+                    <h4 class="course-list">COURSES</h4>
                     <p>Product Development, Business Development, Startup</p>
                   </div>
                 </div>
@@ -171,7 +171,7 @@
                   </div>
                   <div class="course-info">
                     <h3>Marketing</h3>
-                    <h4>COURSES</h4>
+                    <h4 class="course-list">COURSES</h4>
                     <p>Analytics, Content Marketing, Mobile Marketing</p>
                   </div>
                 </div>
