--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <img src="./resources/images/banner.jpg" alt="students at a picnic table">
           </div>
           <div class="banner-text">
-            <h1>Learn something new everyday</h1>
-            <h3>You never know what you might find when your mind is open.</h3>
+            <h1>Learn something new every day</h1>
+            <h3>Lorem ipsum malis movet dolor sit amet, malis movet recteque.</h3>
             <div class="button">
               <p>Start here</p>
             </div>
@@ -62,11 +62,13 @@
         <div class="information">
           <div class="container">
             <div class="container-media">
-            <img src="./resources/images/information-main.jpg" alt="a man studying">
-            <h2>It doesn't hurt to keep practicing.</h2>
-            <p>Mattis praesent auctor suscipit mi velit vitae pulvinar lorem massa Elit nibh magna enim scelerisque dignissim placerat tortor sagittis ligula fringilla eros blandit. Aptent ligula tellus quis, tempor ultrices orci</p>
-            <p class="caption">Emanuel, Sr Strategist at Hiring.com</p>
+              <img src="./resources/images/information-main.jpg" alt="a man studying">
+            <div class="testimonial">
+              <h2>It doesn't hurt to keep practicing.</h2>
+              <p>Mattis praesent auctor suscipit mi velit vitae pulvinar lorem massa Elit nibh magna enim scelerisque dignissim placerat tortor sagittis ligula fringilla eros blandit. Aptent ligula tellus quis, tempor ultrices orci</p>
+              <p  class="caption">Emanuel, Sr Strategist at Hiring.com</p>
             </div>
+          </div>
 
             <div class="features">
               <div class="feature" id="orientation">
@@ -115,7 +117,7 @@
                     <img src="./resources/images/course-software.jpg" alt="computers">
                   </div>
                   <div class="course-info">
-                    <h3>Software engineering</h3>
+                    <h3 class="course-title"><a href="#">Software engineering</a></h3>
                     <h4 class="course-list">COURSES</h4>
                     <p>Web Development, Mobile Development, iOT, APIs</p>
                   </div>
@@ -126,7 +128,7 @@
                     <img src="./resources/images/course-computer-art.jpg" alt="hand with smart phone">
                   </div>
                   <div class="course-info">
-                    <h3>Computer art</h3>
+                    <h3 class="course-title"><a href="#">Computer art</a></h3>
                     <h4 class="course-list">COURSES</h4>
                     <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
                   </div>
@@ -137,7 +139,7 @@
                     <img src="./resources/images/course-design.jpg" alt="hand with old camera">
                   </div>
                   <div class="course-info">
-                    <h3>Design</h3>
+                    <h3 class="course-title"><a href="#">Design</a></h3>
                     <h4 class="course-list">COURSES</h4>
                     <p>User Experience Design, User Research, Visual Design</p>
                   </div>
@@ -148,7 +150,7 @@
                     <img src="./resources/images/course-data.jpg" alt="a laptop">
                   </div>
                   <div class="course-info">
-                    <h3>Data</h3>
+                    <h3 class="course-title"><a href="#">Data</a></h3>
                     <h4 class="course-list">COURSES</h4>
                     <p>Data Science, Big Data, SQL, Data Visualization</p>
                   </div>
@@ -159,7 +161,7 @@
                     <img src="./resources/images/course-business.jpg" alt="a chess board">
                   </div>
                   <div class="course-info">
-                    <h3>Business</h3>
+                    <h3 class="course-title"><a href="#">Business</a></h3>
                     <h4 class="course-list">COURSES</h4>
                     <p>Product Development, Business Development, Startup</p>
                   </div>
@@ -170,7 +172,7 @@
                     <img src="./resources/images/course-computer-art.jpg" alt="a smart watch">
                   </div>
                   <div class="course-info">
-                    <h3>Marketing</h3>
+                    <h3 class="course-title"><a href="#">Marketing</a></h3>
                     <h4 class="course-list">COURSES</h4>
                     <p>Analytics, Content Marketing, Mobile Marketing</p>
                   </div>
