--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">    <title>Colmar Academy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Colmar Academy</title>
   </head>
   <body>
 
