Fix .feature images and adjust styling and positioning for mobile

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             <div class="features">
               <div class="feature" id="orientation">
                 <div class="feature-photo">
-                  <img src="./resources/images/information-orientation.jpg" alt="people walking in a courtyard">
+                  <img class="feature-photo-web" src="./resources/images/information-orientation.jpg" alt="people walking in a courtyard">
+                  <img class="feature-photo-mobile" src="./resources/images/information-orientation-mobile.jpg" alt="people walking in a courtyard">
                 </div>
                 <div class="feature-info">
                   <h3>Orientation date</h3>
@@ -84,7 +85,8 @@
               </div>
               <div class="feature">
                 <div class="feature-photo">
-                  <img src="./resources/images/information-campus.jpg" alt="people studying in a library">
+                  <img class="feature-photo-web" src="./resources/images/information-campus.jpg" alt="people studying in a library">
+                  <img class="feature-photo-mobile" src="./resources/images/information-campus-mobile.jpg" alt="people in library">
                 </div>
                 <div class="feature-info">
                   <h3>Our campus</h3>
@@ -94,7 +96,8 @@
               </div>
               <div class="feature">
                 <div class="feature-photo">
-                  <img src="./resources/images/information-guest-lecture.jpg" alt="A man's face">
+                  <img class="feature-photo-web" src="./resources/images/information-guest-lecture.jpg" alt="A man's face">
+                  <img class="feature-photo-mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="A man's face">
                 </div>
                 <div class="feature-info">
                   <h3>Our guest lecture</h3>
